Añadimos padding a los botones del Header, para arreglar el hover

--- a/LitroGym/public/Styles/Header.css
+++ b/LitroGym/public/Styles/Header.css
@@ -44,6 +44,7 @@
   background: rgb(0, 0, 0);
   height: 100%;
   width: auto;
+  padding: 30px;
 }
 .header-boton:hover {
   background: rgb(35, 35, 35);
