--- a/LitroGym/public/Styles/tailwind.css
+++ b/LitroGym/public/Styles/tailwind.css
@@ -3,7 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
-img {
-  width: 50px;
-  height: 50px;
+
+.home-end-titulos {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.home-end-titulos p {
+  margin: 30px;
+}
+.home-end-fotos {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.img-index {
+  height: 200px;
+  width: 300px;
 }
