--- a/LitroGym/public/Styles/Footer.css
+++ b/LitroGym/public/Styles/Footer.css
@@ -4,6 +4,7 @@ a {
 }
 
 .footer {
+  margin-top: 30px;
   padding-top: 1%;
   padding-bottom: 1%;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
