--- a/LitroGym/public/Styles/tailwind.css
+++ b/LitroGym/public/Styles/tailwind.css
@@ -19,7 +19,7 @@
 }
 .home-end-fotos {
   width: 100%;
-  height: 50vh;
+  height: 100%;
   display: flex;
   justify-content: space-around;
   margin-bottom: 80px;
