He cambiado el Registro, y he creado los ficheros user_services, db.server.ts, y he cambiado el .env

--- a/LitroGym/public/Styles/Registro.css
+++ b/LitroGym/public/Styles/Registro.css
@@ -33,6 +33,9 @@
   justify-content: space-around;
 }
 
+.registro-formulario input {
+  color: black;
+}
 .registro-titulo {
   text-align: center;
 
