--- a/LitroGym/public/Styles/Alimentacion.css
+++ b/LitroGym/public/Styles/Alimentacion.css
@@ -1,13 +1,12 @@
 body {
   background: #000;
 }
+
 .alimentacion {
-  background-image: linear-gradient(
-      to bottom,
-      rgba(175, 175, 175, 0.5),
-      rgb(0, 0, 0)
-    ),
-    url(/src/Components/Imgs/fotoFondo.jpg);
+  background-image: linear-gradient(to bottom,
+      rgba(38, 38, 38, 0.5),
+      rgb(0, 0, 0)),
+    url("/imgs/fondoComida.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -22,6 +21,7 @@ body {
   justify-content: space-evenly;
   margin-bottom: 9%;
 }
+
 .alimentacion-contenedor {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -39,13 +39,15 @@ body {
 
 .alimentacion-titulo {
   text-align: center;
-  margin-top: 1%;
+  margin-top: 10%;
   font-size: 250%;
 }
+
 .alimentacion-contenedor-contenido {
-  margin-top: 10%;
+  margin-top: 5%;
   margin-bottom: 15%;
 }
+
 .alimentacion-contenedor-contenido button {
   display: flex;
   flex-direction: column;
@@ -57,11 +59,7 @@ body {
   border: none;
   font-size: 100%;
 }
+
 .alimentacion-contenedor-contenido button:hover {
   color: rgb(35, 65, 173);
-}
-#titulo {
-  font-size: 150%;
-  margin-bottom: 20%;
-  text-decoration: underline;
 }
