--- a/LitroGym/public/Styles/home.css
+++ b/LitroGym/public/Styles/home.css
@@ -13,6 +13,7 @@
 .home-end-titulos p {
   margin: 30px;
 }
+
 .home-end-fotos {
   width: 100%;
   height: 100%;
@@ -28,15 +29,13 @@
 }
 
 .img-index:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 .home-content {
-  background-image: linear-gradient(
-      to bottom,
+  background-image: linear-gradient(to bottom,
       rgba(175, 175, 175, 0.5),
-      rgb(0, 0, 0)
-    ),
+      rgb(0, 0, 0)),
     url("/imgs/fotoFondo.jpg");
   background-size: cover;
   background-position: center;
@@ -49,6 +48,7 @@
   align-items: center;
   text-align: center;
 }
+
 .home-info {
   display: flex;
   width: 70%;
@@ -57,16 +57,20 @@
   flex-direction: column;
   align-items: center;
 }
+
 .home-slogan {
   font-size: 250%;
 }
+
 .home-textContent {
   font-size: 150%;
 }
+
 .home-logo2 {
   width: 25%;
   height: auto;
 }
+
 /* SERVICIOS */
 .home-end {
   display: flex;
@@ -79,6 +83,7 @@
   padding-bottom: 4rem;
   margin-bottom: 10rem;
 }
+
 .home-endName {
   display: flex;
   width: 100%;
@@ -87,6 +92,7 @@
   align-items: center;
   justify-content: space-around;
 }
+
 .home-tipo {
   display: flex;
   width: 27%;
@@ -95,6 +101,7 @@
   align-items: center;
   justify-content: space-around;
 }
+
 .home-services {
   height: 29vh;
   width: 24%;
@@ -131,6 +138,7 @@
   font: inherit;
   display: inline;
 }
+
 .home-endName {
   margin: 20px;
 }
