--- a/LitroGym/public/Styles/home.css
+++ b/LitroGym/public/Styles/home.css
@@ -4,38 +4,12 @@
   box-sizing: border-box;
 }
 
-.home-end-titulos {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.home-end-titulos p {
-  margin: 30px;
-}
-
-.home-end-fotos {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.img-index {
-  height: 250px;
-  width: 400px;
-  transition: transform 0.3s ease;
-  border-radius: 13px;
-}
-
-.img-index:hover {
-  transform: scale(1.1);
-}
-
 .home-content {
-  background-image: linear-gradient(to bottom,
+  background-image: linear-gradient(
+      to bottom,
       rgba(175, 175, 175, 0.5),
-      rgb(0, 0, 0)),
+      rgb(0, 0, 0)
+    ),
     url("/imgs/fotoFondo.jpg");
   background-size: cover;
   background-position: center;
@@ -71,74 +45,77 @@
   height: auto;
 }
 
-/* SERVICIOS */
 .home-end {
   display: flex;
+  flex-direction: column;
   background: #000;
   width: 100%;
-  height: 50vh;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-content: space-around;
   padding-bottom: 4rem;
   margin-bottom: 10rem;
+  align-items: center;
 }
 
 .home-endName {
-  display: flex;
-  width: 100%;
   color: rgb(255, 255, 255);
   font-size: 190%;
-  align-items: center;
-  justify-content: space-around;
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.home-end-items {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 90%;
+  gap: 2rem;
+  padding-top: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.home-service {
+  width: 30%;
+  text-align: center;
+  margin-bottom: 2rem;
 }
 
 .home-tipo {
-  display: flex;
-  width: 27%;
   color: rgb(255, 255, 255);
   font-size: 100%;
-  align-items: center;
-  justify-content: space-around;
+  margin-bottom: 1rem;
 }
 
-.home-services {
-  height: 29vh;
-  width: 24%;
-  border: 0;
-  background: #000;
+.img-index {
+  width: 100%;
+  height: auto;
+  border-radius: 13px;
+  transition: transform 0.3s ease;
 }
 
-#alimentacion:hover {
-  background-image: url("/imgs/alimentacion.jpg");
+.img-index:hover {
   transform: scale(1.1);
-  opacity: 0.8;
 }
 
-#rutina:hover {
-  background-image: url("/imgs/rutina.jpg");
-  transform: scale(1.1);
-  opacity: 0.8;
+@media (max-width: 1024px) {
+  .home-service {
+    width: 45%;
+  }
 }
 
-#ejercicios:hover {
-  background-image: url("/imgs/training.jpg");
-  transform: scale(1.1);
-  opacity: 0.8;
-}
+@media (max-width: 768px) {
+  .home-end-items {
+    flex-direction: column;
+    align-items: center;
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-.home-boton-servicios {
-  background: none;
-  border: none;
-  padding: 0;
-  margin: 0;
-  color: inherit;
-  text-align: left;
-  cursor: pointer;
-  font: inherit;
-  display: inline;
-}
+  .home-service {
+    width: 90%;
+    margin-bottom: 2rem;
+  }
 
-.home-endName {
-  margin: 20px;
+  .img-index {
+    max-width: 100%;
+  }
 }
