--- a/LitroGym/public/Styles/Alimentacion.css
+++ b/LitroGym/public/Styles/Alimentacion.css
@@ -59,7 +59,75 @@ body {
   border: none;
   font-size: 100%;
 }
+.alimentacion-contenedor-contenido button:hover {
+  color: rgb(35, 65, 173);
+}
+
+body {
+  background: #000;
+}
+
+.alimentacion {
+  background-image: linear-gradient(to bottom,
+      rgba(38, 38, 38, 0.5),
+      rgb(0, 0, 0)),
+    url("/imgs/fondoComida.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  text-align: center;
+  color: white;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin-bottom: 9%;
+}
+
+.alimentacion-contenedor {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.65);
+  width: 30vw;
+  height: auto;
+  border-radius: 2cap;
+  box-shadow: 0px 0px 30px rgba(255, 255, 255, 0.6);
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin-top: 3%;
+}
+
+.alimentacion-titulo {
+  text-align: center;
+  margin-top: 10%;
+  font-size: 250%;
+}
+
+.alimentacion-contenedor-contenido {
+  margin-top: 5%;
+  margin-bottom: 15%;
+}
+
+.alimentacion-contenedor-contenido button {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 7%;
+  color: white;
+  background: none;
+  text-decoration: none;
+  border: none;
+  font-size: 100%;
+}
 
 .alimentacion-contenedor-contenido button:hover {
   color: rgb(35, 65, 173);
 }
+
+
+
