--- a/LitroGym/public/Styles/recetas.css
+++ b/LitroGym/public/Styles/recetas.css
@@ -159,3 +159,13 @@ a {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+@media (max-width: 974px) {
+  .recetas {
+    height: auto;
+  }
+
+  .flip-container {
+    padding-bottom: 3%;
+  }
+}
